# robolens-yam

./: CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
plans/: 0001-yam-molmoact2-design.md
src/robolens_yam/: CLAUDE.md  __init__.py  config.py  embodiment.py  packing.py  policy.py  preflight.py
tests/: test_api_snapshot.py  test_compat.py  test_config.py  test_embodiment.py  test_eval_end_to_end.py  test_policy.py  test_preflight.py
